# BacGenEngine

./: .gitignore  backup.sh
engine/: CMakeLists.txt  Doxyfile
engine/BackGenEngine/: babstractaction.h  babstractasset.h  babstractframebuffer.h  babstractmodulesystem.h  babstractrenderer.h  babstracttexture.h  bassetmodule.h  bassetsavermodule.h  bcomponentmodule.h  blayer.h  bobject.h  bproject.h  brtti.h  bscene.h  bscenemanager.h  btag.h  bvertex.h  bviewfrustrum.h
engine/include/: babstractcameracomponent.h  babstractcomponent.h  babstractrenderer.h  babstractwindow.h  bactionmanager.h  bassetloadermodule.h  bassetmanager.h  bbuttonaction.h  bdynamicmodulesystem.h  blayersmanager.h  blogger.h  bmodulesheader.h  bproject.h  brenderablecomponent.h  brttiobject.h  btagsmanager.h  bvertexbuffer.h
engine/src/: babstractaction.cpp  babstractasset.cpp  babstractcameracomponent.cpp  babstractcomponent.cpp  babstractframebuffer.cpp  babstractmodulesystem.cpp  babstractrenderer.cpp  babstracttexture.cpp  babstractwindow.cpp  bactionmanager.cpp  bassetloadermodule.cpp  bassetmanager.cpp  bassetmodule.cpp  bassetsavermodule.cpp  bbuttonaction.cpp  bcomponentmodule.cpp  bdynamicmodulesystem.cpp  blayer.cpp  blayersmanager.cpp  blogger.cpp  bmodulesheader.cpp  bobject.cpp  bproject.cpp  brenderablecomponent.cpp  brtti.cpp  brttiobject.cpp  bscene.cpp  bscenemanager.cpp  btag.cpp  btagsmanager.cpp  bvertex.cpp  bvertexbuffer.cpp  bviewfrustrum.cpp
modules/asset/texture/: BTextureAsset.cpp  BTextureAsset.h  CMakeLists.txt
modules/includes/: BAbstractMesh.h  BCubeMesh.h  BImageAsset.h  BMaterialAsset.h  BMeshRendererComponent.h  BTextureAsset.h  BTransformationComponent.h  bopenglframebuffer.h  bopengltexture.h
playground/Playground/: Makefile  Playground.pro  pgeneralsettings.cpp  pgeneralsettings.h  pgeneralsettings.ui  playground.qrc  pprojectsettingdialog.cpp  pprojectsettingdialog.h  pprojectsettingdialog.ui  ui_asseteditdockwidget.h  ui_layersmanagerdialog.h  ui_mainwindow.h  ui_newprojectdialog.h  ui_passetsettings.h  ui_pcomponentswidget.h  ui_pdefaulteditassetwidget.h  ui_pgeneralsettings.h  ui_pmodulessettings.h  ui_pmodulessettingsdialog.h  ui_pprojectsettingdialog.h  ui_ptagsmanagerdialog.h  (+1 more)
testing/: CMakeLists.txt
testing/modul/: pokus.cpp  pokus2.cpp
testing/src/: bsdlwindow.cpp  bsdlwindow.h  main.cpp
(+150 files in other folders)
